# solana-depin-examples

./: README.md
Raspberry-LED-display/: hello-solana.js  package-lock.json  package.json  readme.md  solana-slot.js
dephy-vending_machine-examples/: .gitignore  .pre-commit-config.yaml  .prettierignore  Cargo.toml  MIT-LICENSE  README.md  cliff.toml  deny.toml  docker-compose.yml  typos.toml
dephy-vending_machine-examples/.github/dockerfiles/: dephy-vending-machine-examples.dockerfile
dephy-vending_machine-examples/.github/workflows/: build_then_release.yml  check_and_test.yml
dephy-vending_machine-examples/balance-payment/: Anchor.toml  README.md  package.json
dephy-vending_machine-examples/balance-payment-sdk/: Cargo.toml
dephy-vending_machine-examples/balance-payment-sdk/src/: error.rs  lib.rs  verify.rs
dephy-vending_machine-examples/balance-payment/app/: .env.example  README.md  index.html  package.json  vite.config.ts
dephy-vending_machine-examples/balance-payment/app/src/anchor/: balance_payment.json  balance_payment.ts  index.ts
dephy-vending_machine-examples/balance-payment/app/src/app/: app-routes.tsx
dephy-vending_machine-examples/balance-payment/app/src/components/account/: account-ui.tsx
dephy-vending_machine-examples/balance-payment/app/src/components/balance-payment/: balance-payment-data-access.tsx  balance-payment-feature.tsx
dephy-vending_machine-examples/balance-payment/app/src/components/cluster/: cluster-data-access.tsx  cluster-ui.tsx
dephy-vending_machine-examples/balance-payment/app/src/components/ui/: ui-layout.tsx
dephy-vending_machine-examples/balance-payment/bot_example_js/: .dockerignore  Dockerfile  README.md  balance_payment.json  balance_payment.ts  index.ts  package.json
dephy-vending_machine-examples/balance-payment/programs/balance-payment/: Cargo.toml  keypair.json
dephy-vending_machine-examples/balance-payment/programs/balance-payment/src/: constants.rs  errors.rs  lib.rs
dephy-vending_machine-examples/balance-payment/programs/balance-payment/src/instructions/: deposit.rs  initialize.rs  lock.rs  mod.rs  pay.rs  register.rs  set_bot.rs  set_treasury.rs  settle.rs  withdraw.rs
dephy-vending_machine-examples/balance-payment/programs/balance-payment/src/state/: global.rs  lock.rs  mod.rs  user.rs
dephy-vending_machine-examples/balance-payment/programs/balance-payment/src/utils/: ed25519.rs  mod.rs
dephy-vending_machine-examples/balance-payment/scripts/: cli.ts
dephy-vending_machine-examples/balance-payment/tests/: balance-payment.ts
dephy-vending_machine-examples/docker-compose-postgres-init/decharge-controller-docker-entrypoint-initdb.d/: migrate.sh
dephy-vending_machine-examples/docker-compose-postgres-init/messaging_network_migrations/: 20241125030333_initial.sql
dephy-vending_machine-examples/examples/decharge-controller/: Cargo.toml  README.md
dephy-vending_machine-examples/examples/decharge-controller/examples/: cli.rs
dephy-vending_machine-examples/examples/decharge-controller/migrations/: 20250116011256_initial.sql
dephy-vending_machine-examples/examples/decharge-controller/src/: lib.rs  message.rs
dephy-vending_machine-examples/examples/decharge-controller/src/node/: message_handler.rs  mod.rs
dephy-vending_machine-examples/examples/decharge-controller/src/server/: message_handler.rs  mod.rs  state.rs
dephy-vending_machine-examples/examples/gacha-controller/: Cargo.toml  README.md
dephy-vending_machine-examples/examples/gacha-controller/examples/: cli.rs
dephy-vending_machine-examples/examples/gacha-controller/src/: lib.rs  main.rs  message.rs  relay_client.rs
dephy-vending_machine-examples/examples/gacha-controller/src/node/: message_handler.rs
dephy-vending_machine-examples/keypairs/: bot.demo.json  user.demo.json
helium-lorawan-chest/: Anchor.toml  README.md  package.json  tsconfig.json
helium-lorawan-chest/app/: .env  LorBisZjmXHAdUnAWKfBiVh84yaxGVF2WY6kjr7AQu5.json  package-lock.json
helium-lorawan-chest/app/app/: head.tsx  page.tsx
helium-lorawan-chest/programs/lorawan-chest/: Cargo.toml
helium-lorawan-chest/programs/lorawan-chest/src/: lib.rs
helium-lorawan-chest/tests/: LorawanChest.ts
led-switch/: README copy.md  README.md  package.json
led-switch/app/: README.md  package-lock.json  package.json
led-switch/led-switch/: Anchor.toml
led-switch/raspberry/: package-lock.json  package.json  tsconfig.json
led-switch/tests/: led-switch.ts
solana-bar/: Anchor.toml  README.md  package.json
solana-bar/app/: package-lock.json
solana-bar/programs/solana-bar/: Cargo.toml
solana-bar/programs/solana-bar/src/: lib.rs
solana-bar/raspberry/: package.json
solana-bar/tests/: solana_bar.ts  solana_bar_test.ts
termina-data-anchor/: README.md  rewards.json  upload_blob.sh  verify_blob.sh
termina-data-module/: README.md  upload_blob.sh  verify_blob.sh
(+25 files in other folders)
