[workspace]
resolver = "2"
members = [
    "balance-payment-sdk",
    "examples/*",
]

[workspace.package]
license = "MIT"

[workspace.dependencies]
solana-client = { version = "2.2.0", git = "https://github.com/anza-xyz/agave.git", branch = "v2.2" }
solana-program = "2.2.0"
solana-sdk = { version = "2.2.0", features = ["openssl-vendored"] }
solana-zk-token-sdk = { version = "2.2.0", git = "https://github.com/anza-xyz/agave.git", branch = "v2.2" }

arrayref = "0.3.9"
borsh = "0.10.4"
curve25519-dalek = "4.1.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.217"
serde_json = "1.0.137"
serde_with = "3.12.0"
sha2 = "0.10.8"
thiserror = "2.0.11"
tracing = "0.1.41"

clap = "4.5.29"
futures = "0.3.31"
nostr = "0.38.0"
nostr-sdk = "0.38.0"
tokio = "1.43.0"
tracing-subscriber = "0.3.19"

dephy-balance-payment-sdk = { version = "0.1.0", path = "./balance-payment-sdk" }
