[package]
name = "dephy-balance-payment-sdk"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
arrayref = { workspace = true }
borsh = { workspace = true }
curve25519-dalek = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_with = { workspace = true, optional = true }
sha2 = { workspace = true }
solana-client = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
solana-zk-token-sdk = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
