[package]
name = "dephy-decharge-controller"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
clap = { workspace = true }
dephy-balance-payment-sdk = { workspace = true }
futures = { workspace = true }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
sea-query = "0.32.1"
sea-query-binder = { version = "0.7.0", features = ["runtime-tokio", "sqlx-postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "dephy-decharge-controller-node"
path = "bin/dephy-decharge-controller-node.rs"

[[bin]]
name = "dephy-decharge-controller-server"
path = "bin/dephy-decharge-controller-server.rs"
